--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         flightPath.setMap(map);
       }
     </script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA1LZU7U-fPMn6RMgupnjYyQ6gADycg_ow&callback=initMap">
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA1LZU7U-fPMn6RMgupnjYyQ6gADycg_ow&callback=initMap&signed_in=true">
     </script>
   </body>
 </html>
