--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         
         
         for (var i = 0; i < 5; i++) {
-          console.log(i);
+          console.log(flightPlanCoordinates[i].lat);
         	// get existing path
           var path = flightPath.getPath();
           // add new point
