--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           mapTypeId: 'terrain'
         });
         var flightPlanCoordinates2 = [{lat: 10.853400, lng: 106.757108},{lat: 10.854400, lng: 106.757108}];
-        var flightPlanCoordinates = [
+        var x = [
           {lat: 10.863400, lng: 106.758108},
           {lat: 10.873400, lng: 106.759108},
           {lat: 10.883400, lng: 106.760108}
@@ -50,11 +50,11 @@
         
         
         for (var i = 0; i < 5; i++) {
-          console.log(flightPlanCoordinates[i].lat);
+          console.log(x[i].lat);
         	// get existing path
           var path = flightPath.getPath();
           // add new point
-          path.push(new google.maps.LatLng(flightPlanCoordinates[i].lat, flightPlanCoordinates[i].lng));
+          path.push(new google.maps.LatLng(x[i].lat, x[i].lng));
           // update the polyline with the updated path
           flightPath.setPath(path);
         }
